--- a/controle-de-despesas-master/style.css
+++ b/controle-de-despesas-master/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #f7f7f7;
+  background-color: #333;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,22 +27,29 @@ body {
 h1 {
   letter-spacing: 1px;
   margin: 0;
-  color: #2e75cc;
+  color: #2e75ff;
+}
+
+h2 {
+  color: #f7f7f7;
 }
 
 h3 {
   border-bottom: 1px solid #bbb;
   padding-bottom: 10px;
   margin: 40px 0 10px;
+  color: #f7f7f7;
 }
 
 h4 {
   margin: 0;
   text-transform: uppercase;
+  color: #f7f7f7;
 }
 
 .inc-exp-container {
-  background-color: #fff;
+  background-color: #222;
+  border-radius: 2px;
   box-shadow: var(--box-shadow);
   padding: 20px;
   display: flex;
@@ -76,6 +83,8 @@ h4 {
 label {
   display: inline-block;
   margin: 10px 0;
+  background-color: #333;
+  color: #f7f7f7;
 }
 
 input[type='text'],
@@ -113,9 +122,9 @@ input[type='number'] {
 }
 
 .transactions li {
-  background-color: #fff;
+  background-color: #222;
   box-shadow: var(--box-shadow);
-  color: #333;
+  color: #f7f7f7;
   display: flex;
   justify-content: space-between;
   position: relative;
